# tf-study

./: README.adoc  pyproject.toml  z.sh
chapter_3/: 1_basic_tensor.py  2_immediate_mode.py  3_multiple_conversions.py  4_perceptron_or_gate.py  5_perceptron_xor_gate.py  6_perceptron_xor_gate_defunct.py  7_perceptron_xor_gate_enhanced.py
chapter_4/: 1_mnist_multi_classification.py  getting-started-with-titanic.ipynb
